Change class of segment

--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -1,29 +1,26 @@
 <html>
 {{ template "header.tmpl" }}
-  <style>
-    body { background: #1b1c1d }
-  </style>
-
   <body>
 
     <div class="ui inverted vertical masthead center aligned segment">
       {{ template "menu.tmpl" }}
     </div>
-
-    <div class="ui message black huge center aligned segment masthead apoc margin">
-      <div class="header">
-        Changes in Service
-      </div>
-      <p>
-        We just updated our privacy policy here to better service our customers.
-        We recommend reviewing the changes.
-        We just updated our privacy policy here to better service our customers.
-        We recommend reviewing the changes.
-        We just updated our privacy policy here to better service our customers.
-        We recommend reviewing the changes.
-        We just updated our privacy policy here to better service our customers.                                                                                                                           We recommend reviewing the changes. We just updated our privacy policy here to better service our customers.
-        We recommend reviewing the changes.
-      </p>
+    <div class="ui inverted message black huge vertical masthead segment">
+      <div class="ui container">
+	      <div class="header">
+	        Changes in Service
+	      </div>
+	      <p>
+	        We just updated our privacy policy here to better service our customers.
+	        We recommend reviewing the changes.
+	        We just updated our privacy policy here to better service our customers.
+	        We recommend reviewing the changes.
+	        We just updated our privacy policy here to better service our customers.
+	        We recommend reviewing the changes.
+	        We just updated our privacy policy here to better service our customers.                                                                                                                           We recommend reviewing the changes. We just updated our privacy policy here to better service our customers.
+	        We recommend reviewing the changes.
+	      </p>
+	    </div>
     </div>
 
 	</body>
