Added body background color

--- a/templates/header_depth1.tmpl
+++ b/templates/header_depth1.tmpl
@@ -3,3 +3,6 @@
 <script src="../dist/semantic.min.js"></script>
 <title> {{ .title }} </title>
 <link rel="shortcut icon" type="image/x-icon" href="../dist/favicon.ico">
+<style>
+    body { background: #1b1c1d }
+</style>
