Added ui container class to segment

--- a/templates/history_outage.tmpl
+++ b/templates/history_outage.tmpl
@@ -1,28 +1,28 @@
 <html>
 {{ template "header_depth1.tmpl" }}
-  <style>
-    body { background: #1b1c1d }
-  </style>
-
   <body>
 
     <div class="ui inverted vertical masthead center aligned segment">
       {{ template "menu.tmpl" }}
     </div>
 
-    <div class="ui message black center apoc margin">
-    <table class="ui inverted table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Status</th>
-            <th>Notes</th>
-          </tr>
-        </thead>
-        <tfoot>
-        </tfoot>
-      </table>
-    </div>
+    <div class="ui inverted black vertical masthead segment">
+      <div class="ui container">
+		    <div class="ui message black center apoc margin">
+		    <table class="ui inverted table">
+		        <thead>
+		          <tr>
+		            <th>Name</th>
+		            <th>Status</th>
+		            <th>Notes</th>
+		          </tr>
+		        </thead>
+		        <tfoot>
+		        </tfoot>
+		      </table>
+		    </div>
+		  </div>
+		</div>
 
 
 
