Remove file unusable and rename to new extension

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,9 @@
 <html>
-{{ template "header.tmpl" }}
+{{ template "header" . }}
   <body>
 
     <div class="ui inverted vertical masthead center aligned segment">
-      {{ template "menu.tmpl" }}
+      {{ template "menu" . }}
     </div>
     <div class="ui inverted message black huge vertical masthead segment">
       <div class="ui container">
