--- a/templates/history_outage.html
+++ b/templates/history_outage.html
@@ -1,9 +1,9 @@
 <html>
-{{ template "header_depth1.tmpl" }}
+{{ template "header_depth1" . }}
   <body>
 
     <div class="ui inverted vertical masthead center aligned segment">
-      {{ template "menu.tmpl" }}
+      {{ template "menu" . }}
     </div>
 
     <div class="ui inverted black vertical masthead segment">
