--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,4 @@
+{{ define "header" }}
 <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="dist/semantic.min.js"></script>
@@ -6,3 +7,15 @@
 <style>
     body { background: #1b1c1d }
 </style>
+{{ end }}
+
+{{ define "header_depth1" }}
+<link rel="stylesheet" type="text/css" href="../dist/semantic.min.css">
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="../dist/semantic.min.js"></script>
+<title> {{ .title }} </title>
+<link rel="shortcut icon" type="image/x-icon" href="../dist/favicon.ico">
+<style>
+    body { background: #1b1c1d }
+</style>
+{{ end }}
