--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,3 +1,4 @@
+{{ define "menu" }}
 <div class="ui container">
   <div class="ui large secondary inverted menu">
 
@@ -25,3 +26,4 @@
   $('.dropdown')
     .dropdown();
 </script>
+{{ end }}
