--- a/templates/vault_mysql.html
+++ b/templates/vault_mysql.html
@@ -1,8 +1,8 @@
 <html>
-{{ template "header_depth1.tmpl" }}
+{{ template "header_depth1" . }}
   <body>
     <div class="ui inverted vertical masthead center aligned segment">
-      {{ template "menu.tmpl" }}
+      {{ template "menu" . }}
     </div>
     <div class="ui inverted vertical masthead segment">
       <div class="ui container">
