Added more templates to project

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,17 +8,12 @@
     <div class="ui inverted message black huge vertical masthead segment">
       <div class="ui container">
 	      <div class="header">
-	        Changes in Service
+	        Apoc - Agile promoter operations center.
 	      </div>
-	      <p>
-	        We just updated our privacy policy here to better service our customers.
-	        We recommend reviewing the changes.
-	        We just updated our privacy policy here to better service our customers.
-	        We recommend reviewing the changes.
-	        We just updated our privacy policy here to better service our customers.
-	        We recommend reviewing the changes.
-	        We just updated our privacy policy here to better service our customers.                                                                                                                           We recommend reviewing the changes. We just updated our privacy policy here to better service our customers.
-	        We recommend reviewing the changes.
+				<p>
+				</br>
+					O Apoc nasceu com o intuito de centralizar e compartilhar todas as informações pertinentes
+					ao Agile Promoter.
 	      </p>
 	    </div>
     </div>
