--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 {{ define "menu" }}
 <div class="ui container">
-  <div class="ui large secondary inverted menu">
+  <div class="ui larger pointing inverted menu red">
 
     <a class="item" href="/"> Home </a>
     <a class="item" href="/about"> About </a>
@@ -8,6 +8,10 @@
       <div class="ui pointing dropdown link item red"> History
         <div class="menu">
           <a href="/history/outages" class="item"> Outages </a>
+          <a href="/history/tickets" class="item"> Tickets </a>
+          <a href="/history/restarts" class="item"> Restarts </a>
+          <a href="/history/updates" class="item"> Updates </a>
+          <a href="/history/versions" class="item"> Versions </a>
         </div>
       </div>
 
