--- a/templates/history_updates.html
+++ b/templates/history_updates.html
@@ -9,7 +9,7 @@
 				<h1 class="ui header red">
 					<i class="history icon"></i>
 					<div class="content">
-						Outage History.
+						Updates History.
 					</div>
 				</h1>
 				<p></p>
@@ -19,21 +19,21 @@
 							<thead>
 								<tr role="row">
 								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 200px;">Client Name</th>
-								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 650px;">Server</th>
-								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 1000px;">Date</th>
-								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 650px;">Duration</th>
+								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 650px;">Platform</th>
+								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 200px;">Old Version></OldVersion></th>
+								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 650px;">Release Version</th>
+								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 200px;">Date</th>
 								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 650px;">User</th>
-								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 650px;">Top 10</th></tr>
 							</thead>
 							<tbody>
-							{{ range $key, $value := .Outages }}
+							{{ range $key, $value := .Updates }}
 							<tr role="row" class="even">
-								<td>{{ .ClientID }}</td>
-								<td>{{ .ServerAddress }}</td>
-								<td>{{ .CreationDate }}</td>
-								<td>{{ .Duration }}</td>
-								<td>{{ .Agent }}</td>
-								<td>{{ .TopClients }}</td>
+								<td>{{ .ClientId }}</td>
+								<td>{{ .Platform }}</td>
+								<td>{{ .PreviousVersion }}</td>
+								<td>{{ .UpdatedVersion }}</td>
+								<td>{{ .Date }}</td>
+								<td>{{ .User }} </td>
 							</tr>
 							{{ end }}
 							</tbody>
