Added small property in table class

--- a/templates/history_restarts.html
+++ b/templates/history_restarts.html
@@ -15,7 +15,7 @@
 				<p></p>
 				<div class="ui raised segment inverted red">
 					<div class="sixteen wide column">
-						<table id="historyTable" class="ui compact selectable striped celled table dataTable no-footer" cellspacing="0" width="100%" role="grid" aria-describedby="example_info" style="width: 100%;">
+						<table id="historyTable" class="ui compact selectable striped celled small table dataTable no-footer" cellspacing="0" width="100%" role="grid" aria-describedby="example_info" style="width: 100%;">
 							<thead>
 								<tr role="row">
 								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 150px;">Client Name</th>
