--- a/templates/history_versions.html
+++ b/templates/history_versions.html
@@ -13,9 +13,9 @@
 					</div>
 				</h1>
 				<p></p>
-				<div class="ui raised segment inverted red">
+				<div class="ui segment inverted red">
 					<div class="sixteen wide column">
-						<table id="historyTable" class="ui compact selectable striped celled table dataTable no-footer" cellspacing="0" width="100%" role="grid" aria-describedby="example_info" style="width: 100%;">
+						<table id="historyTable" class="ui compact selectable celled striped table small dataTable no-footer" cellspacing="0" width="100%" role="grid" aria-describedby="example_info" style="width: 100%;">
 							<thead>
 								<tr role="row">
 								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 200px;">Web Version</th>
