--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 {{ define "menu" }}
 <div class="ui container">
-  <div class="ui larger pointing inverted menu red">
+  <div class="ui larger inverted menu red">
 
     <a class="item" href="/"> Home </a>
     <a class="item" href="/about"> About </a>
@@ -18,6 +18,7 @@
       <div class="ui pointing dropdown link item red"> Vault
         <div class="menu">
           <a href="/vault/mysql" class="item"> MySQL </a>
+          <a href="/vault/mongo" class="item"> Mongo </a>
         </div>
       </div>
 
