--- a/templates/vault_mongo.html
+++ b/templates/vault_mongo.html
@@ -9,10 +9,10 @@
         <h1 class="ui header red" id="headerMysqlTitle">
           <i class="database icon inverted blue"></i>
           <div class="content">
-            MysqlDB credentials generate.
+            MongoDB credentials generate.
           </div>
         </h1>
-        <form id="mysqlForm" class="ui form inverted" action="/v1/vault/mysql/create-creds" method="POST">
+        <form id="vaultMongoForm" class="ui form inverted" action="/v1/vault/mongo/create-creds" method="POST">
           <div class="field eight wide">
             <h3>Github token</h3>
             <input type="text" name="githubToken" maxlength="40">
@@ -20,9 +20,7 @@
           <div class="eight wide field">
             <h3>Database</h3>
             <select name="database">
-              <option value="involvesdbeua">involvesdbeua</option>
-              <option value="involvesdbeua2">involvesdbeua2</option>
-              <option value="involvesdbeua3">involvesdbeua3</option>
+              <option value="mongodb_us">MongoDB-US</option>
             </select>
           </div>
           <h3>Access mode</h3>
@@ -43,14 +41,14 @@
 	        </div>
 	        </p>
 		      <div class="ui buttons red right aligned right floated">
-            <div id="submitMysqlForm" class="ui primary submit button">Submit</div>
+            <div id="vaultSubmitMongoForm" class="ui primary submit button">Submit</div>
           </div>
         </form>
       </div>
     </div>
     <div class="ui mini modal">
-      <div class="header">Mysql Credentials <i class="unlock alternate icon"></i> </div>
-        <div id="mysqlCredsInformation" class="ui positive message">
+      <div class="header">Mongo Credentials <i class="unlock alternate icon"></i> </div>
+        <div id="vaultMongoCredsInformation" class="ui positive message">
       </div>
       <div class="actions">
         <div class="ui buttons">
@@ -62,4 +60,4 @@
 </html>
 
 <script src="http://malsup.github.com/jquery.form.js"></script>
-<script src="../dist/mod/vaultMysql.js"></script>
+<script src="../dist/mod/vaultMongo.js"></script>
