--- a/templates/history_versions.html
+++ b/templates/history_versions.html
@@ -20,7 +20,7 @@
 								<tr role="row">
 								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 200px;">Web Version</th>
 								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 650px;">Android Version</th>
-								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 200px;">Ios Version></OldVersion></th>
+								<th class="sorting" tabindex="0" aria-controls="tableControl" rowspan="1" colspan="1" style="width: 200px;">Ios Version></th>
 							</thead>
 							<tbody>
 							{{ range $key, $value := .Versions }}
