Added staging to menu

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,25 +4,26 @@
 
     <a class="item" href="/"> Home </a>
     <a class="item" href="/about"> About </a>
+    <a class="item" href="/staging/environment"> Staging </a>
 
-      <div class="ui pointing dropdown link item red"> History
-        <div class="menu">
-          <a href="/history/outages" class="item"> Outages </a>
-          <a href="/history/tickets" class="item"> Tickets </a>
-          <a href="/history/restarts" class="item"> Restarts </a>
-          <a href="/history/updates" class="item"> Updates </a>
-          <a href="/history/versions" class="item"> Versions </a>
-        </div>
+    <div class="ui pointing dropdown link item red"> History
+      <div class="menu">
+        <a href="/history/outages" class="item"> Outages </a>
+        <a href="/history/tickets" class="item"> Tickets </a>
+        <a href="/history/restarts" class="item"> Restarts </a>
+        <a href="/history/updates" class="item"> Updates </a>
+        <a href="/history/versions" class="item"> Versions </a>
       </div>
+    </div>
 
-      <div class="ui pointing dropdown link item red"> Vault
-        <div class="menu">
-          <a href="/vault/mysql" class="item"> MySQL </a>
-          <a href="/vault/mongo" class="item"> Mongo </a>
-        </div>
+    <div class="ui pointing dropdown link item red"> Vault
+      <div class="menu">
+        <a href="/vault/mysql" class="item"> MySQL </a>
+        <a href="/vault/mongo" class="item"> Mongo </a>
       </div>
+    </div>
 
-      <i class="ui right item"> Cheers </i>
+    <i class="ui right item"> Cheers </i>
 
   </div>
 </div>
